--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-art-template": "^1.0.1",
+    "express-ws": "^5.0.2",
     "multer": "^1.4.3"
   }
 }
